# cz-elections

./: .env  .env.example  .gitignore  CAPTURE_CONFIG.md  DESIGN.md  Makefile  README.md  demo_incremental.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
config/: coalitions.yaml  parties.yaml
data/raw/: ps2021_national_totals.csv  ps2021_region_totals.csv
docker/: Dockerfile
scripts/: fetch_2021_data.py  run_capture_local.sh  systemd-capture.service  validate_xml_2025.py
src/capture/: batch_snapshots.py  config.py  runner.py  stateful_snapshots.py  utils.py
src/cz_elections_live/: settings.py  streamlit_app.py
src/cz_elections_live/data_adapters/: incremental_2021.py  ps2021_fixture.py  replay_2025.py  volby2025.py
src/cz_elections_live/model/: monte_carlo.py  seats.py  thresholds.py
src/cz_elections_live/sim_scenarios/: progress_profiles.py
src/cz_elections_live/utils/: logging.py  timers.py
tests/: test_adapters.py  test_incremental_simulator.py  test_monte_carlo.py  test_seats.py
